# markets_insights

./: .gitignore  LICENSE.MD  LICENSE.md  README.MD  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: aggregation.py  arithmatic.py  extending-datareader.py  rsi-calculation.py  test.py
manual_data/: indices.csv
manual_data/Indices/: NIFTY 100_Data.csv  NIFTY 200_Data.csv  NIFTY 50 FUTURES PR_Data.csv  NIFTY 500_Data.csv  NIFTY ENERGY_Data.csv  NIFTY FMCG_Data.csv  NIFTY HEALTHCARE_Data.csv  NIFTY MEDIA_Data.csv  NIFTY METAL_Data.csv  NIFTY MIDCAP 100_Data.csv  NIFTY MIDCAP 50_Data.csv  NIFTY NEXT 50_Data.csv  NIFTY PRIVATE BANK_Data.csv  NIFTY PSU BANK_Data.csv  NIFTY SMALLCAP 100_Data.csv
notebooks/: caching.ipynb  core.ipynb  examples.ipynb  index.ipynb  scratchpad.ipynb
src/: core.py  data_processor.py  data_reader.py  environment.py  settings.py  test.ipynb
src/calculations/: base.py  derivatives.py  equity.py
src/core/: column_definition.py  core.py  settings.py
src/dataprocess/: data_processor.py
src/datareader/: data_reader.py
src/manual_data/: indices.csv
src/manual_data/Indices/: NIFTY 50 ARBITRAGE_Data.csv  NIFTY 50_Data.csv  NIFTY AUTO_Data.csv  NIFTY BANK_Data.csv  NIFTY IT_Data(1).csv  NIFTY MICROCAP 250_Data.csv  NIFTY MIDCAP 150_Data.csv  NIFTY OIL & GAS_Data.csv  NIFTY PHARMA_Data.csv  NIFTY PSE_Data.csv  NIFTY REALTY_Data.csv  NIFTY SMALLCAP 250_Data.csv  NIFTY SMALLCAP 50_Data.csv  NIFTY TOTAL MARKET_Data.csv  NIFTY50 DIVIDEND POINTS_Data.csv
src/market_insights/calculations/: base.py  derivatives.py  equity.py
src/market_insights/core/: column_definition.py  core.py  environment.py  settings.py
src/market_insights/dataprocess/: data_processor.py
src/market_insights/datareader/: data_reader.py
src/market_insights/trade_builders/: derivatives.py  results.py
src/markets_insights/calculations/: base.py  derivatives.py  equity.py
src/markets_insights/core/: column_definition.py  core.py  environment.py  settings.py
src/markets_insights/dataprocess/: data_processor.py
src/markets_insights/datareader/: data_reader.py
src/markets_insights/trade_builders/: derivatives.py  results.py
src/src/: core.py  data-parse.py  data_reader.py
src/trade_builders/: derivatives.py  results.py
test/: equity.ipynb  examples.ipynb  index-nse.ipynb  test.ipynb
test/derivatives/: expiry-analysis.ipynb  rsi-trade-analysis.ipynb
tests/: helper.py  test_calculations.py  test_dataprocess.py  test_dataprocess_caching.py  test_datareader.py  test_datareader_has_data.py
