[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["sphinx-lint"]
[project]
name = "markets-data-manager"
version = "1.0.1"
authors = [
  { name="Naresh Rohra", email="naresh.rohra@hotmail.com" },
]
description = "This package fetches and processes capital markets data from NSE (National Stock Exchange, India)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nareshrohra/markets-data-manager/"
Issues = "https://github.com/nareshrohra/markets-data-manager/issues"